Add pytest configuration and initial test suite for Schema RAG service
- Created pytest.ini for test configuration.
- Added testing dependencies to requirements.txt.
- Introduced unit tests in tests/test_service.py for SchemaRagService, covering initialization, query expansion, keyword extraction, lexical boosting, entity extraction, and grounding retrieval.
- Included README.md in tests directory with instructions on running tests and details on test coverage.
- Added __init__.py in tests directory to define the package.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@
 faiss-cpu>=1.7.4
 sentence-transformers>=2.2.0
 
+# Testing dependencies
+pytest>=7.0.0
+pytest-cov>=4.0.0
+
 # Optional: For SQLAlchemy model export (if using export script)
 # sqlalchemy>=2.0.0
