Enhance README and scripts for MSSQL Server support
- Updated README.md to include instructions for generating documents from MSSQL Server schema, detailing installation of required drivers and usage examples.
- Added a new script, `introspect_mssql_schema.py`, for introspecting MSSQL Server database schemas and exporting them to JSON format.
- Enhanced `generate_schema_rag_docs.py` to support MSSQL-specific SQL syntax in query recipes, allowing for dialect-specific functions and improved document generation.
- Updated requirements.txt to include optional MSSQL driver dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ pytest-cov>=4.0.0
 
 # Optional: For SQLAlchemy model export (if using export script)
 # sqlalchemy>=2.0.0
+
+# Optional: For MSSQL Server schema introspection
+# Install one of:
+# pyodbc>=4.0.0  # Recommended for Windows/Linux
+# pymssql>=2.2.0  # Alternative driver
